force-app/main/default/objects/AI_Priority_Queue__c/AI_Priority_Queue__c.object-meta.xml
<CustomObject>
    <label>AI Priority Queue</label>
    <pluralLabel>AI Priority Queues</pluralLabel>
    <nameField>
        <label>Queue Name</label>
        <type>AutoNumber</type>
        <displayFormat>APQ-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Structure__c</fullName>
        <label>Structure</label>
        <type>Lookup</type>
        <referenceTo>Structure__c</referenceTo>
        <relationshipName>AI_Priority_Queues</relationshipName>
    </fields>
    <fields>
        <fullName>Wildfire_Risk_Score__c</fullName>
        <label>Wildfire Risk Score</label>
        <type>Lookup</type>
        <referenceTo>Wildfire_Risk_Score__c</referenceTo>
        <relationshipName>AI_Priority_Queues</relationshipName>
    </fields>
    <fields>
        <fullName>Priority_Rank__c</fullName>
        <label>Priority Rank</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Immediate Replace</fullName><label>Immediate Replace</label><default>false</default></value>
                <value><fullName>Schedule Repair</fullName><label>Schedule Repair</label><default>false</default></value>
                <value><fullName>Monitor</fullName><label>Monitor</label><default>false</default></value>
                <value><fullName>Re-inspect</fullName><label>Re-inspect</label><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue_Status__c</fullName>
        <label>Queue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Active</fullName><label>Active</label><default>true</default></value>
                <value><fullName>Work Order Created</fullName><label>Work Order Created</label><default>false</default></value>
                <value><fullName>Resolved</fullName><label>Resolved</label><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
</CustomObject>