force-app/main/default/objects/AI_Priority_Queue__c/fields/Days_Since_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Inspection__c</fullName>
    <label>Days Since Last Inspection</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <formula>IF(NOT(ISBLANK(Structure__r.Last_Inspection_Date__c)), TODAY() - Structure__r.Last_Inspection_Date__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>