force-app/main/default/objects/AI_Priority_Queue__c/fields/Overdue_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Inspection__c</fullName>
    <label>Overdue Inspection</label>
    <type>Checkbox</type>
    <formula>IF(NOT(ISBLANK(Structure__r.Last_Inspection_Date__c)), TODAY() - Structure__r.Last_Inspection_Date__c > 365, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>